grammar.js
        source_file: ($) => repeat($._definition),

        mathematical_operators: ($) =>
            choice("+", "-", "*", "/", $.mathematical_operators_mod_keyword),
        operators_used_in_statements: ($) =>
            choice($.mathematical_operators, $.bit_operators),
        _definition: ($) =>
            choice(
                $.a_function,
                $.xml_non_function_docstring,
                $.variable_declaration,
                $.array_declaration, // cannot be inside of function body - at least, i dont think a module declaration inside of a function would work? idk, should test it sometime
            ),

        function_end: ($) => token("END"),

        a_function: ($) =>
            seq(
                optional($.xml_function_docstring),
                $.function_definition,
                optional(repeat($.variable_declaration)),
                optional(repeat($.statement)),
                optional($.return_statment),
                $.function_end,
            ),
        _int_keyword: (_) => token("INT"),
        _string_keyword: (_) => token("STRING"),
        _real_keyword: (_) => token("REAL"),
        _quality_keyword: (_) => token("QUALITY"),
        _timestamp_keyword: (_) => token("TIMESTAMP"),
        _bool_keyword: (_) => token("BOOL"),
        _object_keyword: (_) => token("OBJECT"),
        _long_keyword: (_) => token("LONG"),
        _void_keyword: (_) => token("VOID"),

        type: ($) =>
            choice(
                $._int_keyword,
                $._string_keyword,
                $._real_keyword,
                $._quality_keyword,
                $._timestamp_keyword,
                $._bool_keyword,
                $._object_keyword,
                $._long_keyword, // IDK, their docs dont mention it iirc, but their examples do
                $._void_keyword, // Only valid for functions, but eh
            ),

        number: ($) => prec(2, /(\d+(?:\.\d+)?)/),

        punctuation_semicolon: ($) => token(";"), // somehow having the optional whitespace speeds up the parser?
        punctuation_bracket_open: ($) => token("("),
        punctuation_bracket_close: ($) => token(")"),
        punctuation_equals_sign: ($) => token(seq("=", optional(""))),
        assign_to_value: ($) =>
            seq(
                field("assign_to_value_equals_sign", $.punctuation_equals_sign),
                $.expression_,
                optional($.format_specifier),
            ),

        identifier: ($) => /[0-9A-Za-z_]+/,
        function_keyword: ($) => token("FUNCTION"),
        function_definition: ($) =>
            seq(
                field("scope", optional($.function_scope)),
                field("return_type", optional($.type)),
                $.function_keyword,
                field("function_name", $.identifier),
                field(
                    "function_definition_bracket_open",
                    $.punctuation_bracket_open,
                ),
                field("parameters", optional($.function_parameters)),
                field(
                    "function_definition_bracket_close",
                    $.punctuation_bracket_close,
                ),
                "\n",
            ),
        expression_in_brackets: ($) =>
            seq(
                field("expression_open_brackets", $.punctuation_bracket_open),
                $.expression_,
                field("expression_close_brackets", $.punctuation_bracket_close),
            ),
        unary_minus_negation_symbol: ($) => "-",
        unary_minus_expression_atom: ($) =>
            prec.right(
                2,
                seq($.unary_minus_negation_symbol, $.expression_atom),
            ), // unary minus

        expression_atom: ($) =>
            choice(
                field("variable", $.identifier),
                $.string,
                $.number,
                $.format_specifier_variable,
                $.array_variable,
                $.expression_in_brackets,
                $.unary_minus_expression_atom,
                $.function_call,
            ),

        expression: ($) =>
            prec.left(
                2,
                seq(
                    $.expression_,
                    $.operators_used_in_statements,
                    $.expression_,
                ),
            ),

        expression_: ($) =>
            prec.left(2, choice($.expression_atom, $.expression)),

        statement: ($) =>
            choice(
                $.for_loop,
                $.while_loop,

                field("if_statement", $.if_statement),
                field("select_case", $.select_case_statement),
                $.variable_declaration, // remove this from here if variable declerations must happen before statements
                $.variable_assignment,
                $.statement_function_call,
            ),

        variable_assignment: ($) =>
            seq(
                field("variable", $.identifier),
                optional(field("array_dimensions", $.array_brackets_index)),
                $.assign_to_value,
                field("closing_semicolon", $.punctuation_semicolon),
            ),
