test/corpus/expressions.txt
===================
Unary Expression
===================
FUNCTION UnaryExpr()
    INT x;
    x = -x;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (unary_minus_expression_atom
                (unary_minus_negation_symbol)
                (expression_atom
                  (identifier))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Binary Expression
===================
FUNCTION BinaryExpr()
    INT x;
    x = 1 + 2;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (number)))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Nested Expression
===================
FUNCTION NestedExpr()
    INT x;
    x = (1 + (2 * 3)) - 4;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (expression_in_brackets
                    (punctuation_bracket_open)
                    (expression_
                      (expression
                        (expression_
                          (expression_atom
                            (number)))
                        (operators_used_in_statements
                          (mathematical_operators))
                        (expression_
                          (expression_atom
                            (expression_in_brackets
                              (punctuation_bracket_open)
                              (expression_
                                (expression
                                  (expression_
                                    (expression_atom
                                      (number)))
                                  (operators_used_in_statements
                                    (mathematical_operators))
                                  (expression_
                                    (expression_atom
                                      (number)))))
                              (punctuation_bracket_close))))))
                    (punctuation_bracket_close))))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Math Expressions
===================
FUNCTION MathExpression()
    INT Value1;
    Value1 = 3*((1+2)-2);
    Value1 = Value1/4;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (number)))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (expression_in_brackets
                    (punctuation_bracket_open)
                    (expression_
                      (expression
                        (expression_
                          (expression_atom
                            (expression_in_brackets
                              (punctuation_bracket_open)
                              (expression_
                                (expression
                                  (expression_
                                    (expression_atom
                                      (number)))
                                  (operators_used_in_statements
                                    (mathematical_operators))
                                  (expression_
                                    (expression_atom
                                      (number)))))
                              (punctuation_bracket_close))))
                        (operators_used_in_statements
                          (mathematical_operators))
                        (expression_
                          (expression_atom
                            (number)))))
                    (punctuation_bracket_close)))))))
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (identifier)))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))
